--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.bgimg {
+  background-color: whitesmoke;
+  background-image: radial-gradient(
+      at 81% 35%,
+      rgb(167, 243, 208) 0,
+      transparent 27%
+    ),
+    radial-gradient(at 14% 22%, rgb(167, 243, 208) 0, transparent 12%),
+    radial-gradient(at 74% 87%, rgb(167, 243, 208) 0, transparent 31%),
+    radial-gradient(at 23% 66%, rgb(167, 243, 208) 0, transparent 31%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.animate-gradient {
+  background-size: 300%;
+  -webkit-animation: animatedgradient 6s ease infinite alternate;
+  -moz-animation: animatedgradient 6s ease infinite alternate;
+  animation: animatedgradient 6s ease infinite alternate;
+}
+
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 30%;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  25% {
+    background-position: 50% 30%;
+  }
+  50% {
+    background-position: 100% 30%;
+  }
+  75% {
+    background-position: 50% 30%;
+  }
+  100% {
+    background-position: 0% 30%;
   }
 }
