--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,5 +112,5 @@
 }
 
 .text-gradient {
-  @apply transition-colors delay-75 bg-gradient-to-r from-orange-700 via-indigo-500 to-green-400 text-transparent bg-clip-text animate-gradient;
+  @apply transition-colors delay-75 bg-gradient-to-r to-orange-700 via-indigo-500 from-green-400 text-transparent bg-clip-text animate-gradient;
 }
